--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
+
 <title></title>
-<main></main>
+<link rel="stylesheet" href="/static/style.css">
+<style>
+    #root {
+        display: flex;
+        justify-content: space-between;
+    }
+</style>
+<main id='root'></main>
 <script src="/bundle.js"></script>
