--- a/index_react.html
+++ b/index_react.html
@@ -583,7 +583,7 @@ And of course we can rely on a tried and tested backstage team (stage director, 
     </div>
  <!-- Lightbox galery -->
    <div id="js-grid-lightbox-gallery" class="cbp">
-	      <!-- <!-- Project 9 -->
+	      <!--  Project 9 -->
         <div class="cbp-item corporate">
             <a href="assets/projects/ajax-lightbox-gallery/project9.html" class="cbp-caption cbp-singlePageInline" data-title="ŠKODA TRAINING DRESDEN<br>Projection Mapping performance" rel="nofollow">
                
